syntax = "proto3";

option csharp_namespace = "GrpcService.Protos"; 

package ClientSteaming;

service ClientSteaming {
	rpc SendMessage (stream ClientSteamingMessageRequest) returns (ClientSteamingMessageReply);
}

message ClientSteamingMessageRequest {
	string name = 1;
}

message ClientSteamingMessageReply {
	string message = 1;
}