syntax = "proto3";

option csharp_namespace = "GrpcService"; 

package UnaryType;

service UnaryType {
  rpc SendMessage (MessageRequest) returns (MessageReply);
}

message MessageRequest {
  string name = 1;
}

message MessageReply {
  string message = 1;
}
